--- a/resources/views/auth/students/registration.ejs
+++ b/resources/views/auth/students/registration.ejs
@@ -1,8 +1,11 @@
     <!-- registration section start -->
     <section class="registration py-20" >
 
-        <h3 class="sub-heading"> student registration </h3>
-        <h1 class="heading"> do your registration </h1>
+        <h1 class="heading"> Student Registration Form </h1>
+        <h3 class="sub-heading">Please properly fill and submit form to complete registration </h3>
+        
+        
+        
         
         <form action="/student/registration" method="POST">
             <% if(messages.error) { %>
@@ -12,31 +15,31 @@
             <% } %>
             <div class="inputBox">
                 <div class="input">
-                    <label for="firstName">first name</label>
+                    <label for="firstName">First Name</label>
                     <input name="firstName" id="firstName" value="<%= messages.firstName %>" type="text" placeholder="enter your first name">
                 </div>
                 <div class="input">
-                    <label for="lastName">last name</label>
+                    <label for="lastName">Last Name</label>
                     <input id="lastName" name="lastName" value="<%= messages.lastName %>" type="text" placeholder="enter your last name">
                  </div>
             </div>
             <div class="inputBox">
                 <div class="input">
-                    <label for="fatherName">first name</label>
+                    <label for="fatherName">Father's Name</label>
                     <input name="fatherName" id="fatherName" value="<%= messages.fatherName %>" type="text" placeholder="enter your father's name">
                 </div>
                 <div class="input">
-                    <label for="mohterName">last name</label>
+                    <label for="mohterName">Mother's Name</label>
                     <input id="mohterName" name="mohterName" value="<%= messages.mohterName %>" type="text" placeholder="enter your mother's name">
                  </div>
             </div>
             <div class="inputBox">
                 <div class="input">
-                    <label for="dob">date of birth</label>
+                    <label for="dob">Date of Birth</label>
                     <input type="date" name="dob" id="dob" value="<%= messages.dob %>" type="text" placeholder="MM/DD/YYYY">
                 </div>
                 <div class="input">
-                    <label for="uniName">university name</label>
+                    <label for="uniName">University Name</label>
                     <select name="uniName" id="" class="select-box">
                         <option value="University of Liberal Arts Bangladesh">University of Liberal Arts Bangladesh</option>
                         <option value="University of Khulna">University of Khulna</option>
@@ -48,31 +51,31 @@
             </div>
             <div class="inputBox">
                 <div class="input">
-                    <label for="studentEmail">your email</label>
+                    <label for="studentEmail">Your Email</label>
                     <input name="studentEmail" id="studentEmail" value="<%= messages.studentEmail %>" type="text" placeholder="enter your university email">
                 </div>
                 <div class="input">
-                    <label for="studentID">your student ID</label>
+                    <label for="studentID">Your Student ID</label>
                     <input id="studentID" name="studentID" value="<%= messages.studentID %>" type="text" placeholder="enter your student ID">
                  </div>
             </div>
             <div class="inputBox">
                 <div class="input">
-                    <label for="phone">contact number</label>
+                    <label for="phone">Phone Number</label>
                     <input name="phone" type="phone" value="<%= messages.phone %>" type="text" placeholder="enter your contact number">
                 </div>
                 <div class="input">
-                    <label for="address">address</label>
+                    <label for="address">Address</label>
                     <input id="address" name="address" value="<%= messages.address %>" type="text" placeholder="enter your present address">
                 </div>
             </div>
             <div class="inputBox">
                 <div class="input">
-                    <label for="password">password</label>
+                    <label for="password">Password</label>
                     <input id="password" name="password" value="" type="password" placeholder="****************">
                 </div>
                 <div class="input">
-                    <label for="confirmPass">confirm password</label>
+                    <label for="confirmPass">Confirm Password</label>
                     <input id="confirmPass" name="confirmPass" value="" type="password" placeholder="*****************">
                 </div>
             </div>
