--- a/resources/views/universities/certificate/createForm.ejs
+++ b/resources/views/universities/certificate/createForm.ejs
@@ -2,8 +2,9 @@
 <section class="home-content py-20">
     <section class="ml-20 certificate_container py-20">
             
-            <h3 class="sub-heading"> Certificate Creation </h3>
-            <h1 class="heading"> Fill up the form create a certificate </h1>
+           <h1 class="heading"> Certificate Creation </h1>
+           <h3 class="sub-heading"> Fill up the form to create a certificate. </h3>
+            
              
             <form action="/university/certificate/create" method="POST">
                 <% if(messages.error) { %>
@@ -12,7 +13,7 @@
                     <span class="text-green-500 text-4xl font-bold"><%= messages.success %></span>
                 <% } %>
                 <div class="row">
-                    <h4 class="mb-10">Certificate Creation Form</h4>
+                    <h4 class="mb-10 mt-10">Please fill up ALL the fields unless mentioned 'optional'!!</h4>
                     <div class="input-group input-group-icon">
                         <input type="hidden" name="id" value="">
                         <input type="text" name="full_name" value="<%= messages.full_name %>" placeholder="Full Name">
