--- a/resources/views/ugc/logs-university.ejs
+++ b/resources/views/ugc/logs-university.ejs
@@ -28,7 +28,7 @@
             
           <div class="table-row table-body">
             <div class="cell" data-title="Organization Name">
-              <%= moment(log.createdAt).format('DD:MM:YYYY') %> 
+              <%= moment(log.createdAt).format('MMMM Do YYYY, h:mm:ss A') %> 
             </div>
             <div class="cell" data-title="Type of Org.">
                <%= log.uniName %>
@@ -43,39 +43,7 @@
           </div> 
           <% }) %>
 
-          <div class="table-row table-body">
-            <div class="cell" data-title="Organization Name">
-              October 30,2021 7:00 PM 
-            </div>
-            <div class="cell" data-title="Type of Org.">
-               University of Khulna
-            </div>
-            <div class="cell" data-title="Type of Org.">
-              Checker 
-            </div>
-            <div class="cell" data-title="Type of Org.">
-               Blockchained Certificate: 907eb4eb-ggle-4bdf-8f1e-fdaee435e9
-             </div>
-           
-          </div> 
-
-          <div class="table-row table-body">
-            <div class="cell" data-title="Organization Name">
-              October 30,2021 6:00 PM 
-            </div>
-            <div class="cell" data-title="Type of Org.">
-               University of Barishal
-            </div>
-            <div class="cell" data-title="Type of Org.">
-              Maker 
-            </div>
-            <div class="cell" data-title="Type of Org.">
-              Created Certificate: 0071eb4eb-ggle-4bdf-8f1e-fdaee435e9
-             </div>
-           
-          </div> 
-          
-          
+      
            
           </div>
 
