Bulk commit for saving purposes only. Not a structured or modular commit

--- a/resources/views/_layouts/header.ejs
+++ b/resources/views/_layouts/header.ejs
@@ -12,7 +12,7 @@
         <i class="fas fa-bars" id="menu-bars"></i>
         <a href="/login"><i class="fas fa-sign-in-alt"></i></a>
         <a id="registration" href="/registration"><i class="fas fa-user-plus"></i></a>
-        <a id="logout" href="/logout"><i class="fas fa-sign-out-alt" id=""></i></a>
+        <a id="logout" href="/logout"><i class="fas fa-times-circle"></i></a>
     </div>
 </header>
 <!-- header section end -->
