--- a/resources/views/_layouts/headerUser.ejs
+++ b/resources/views/_layouts/headerUser.ejs
@@ -22,9 +22,17 @@
           <li>
             <a href="/university/certificate/approved-list" class="">
               <i class='bx bx-grid-alt'></i>
-              <span class="links_name">Approved Certificates</span>
+              <span class="links_name">Certificates Approved</span>
             </a>
           </li>
+
+          <li>
+            <a href="/certificate/maker/view-pending" class="">
+              <i class='bx bx-grid-alt'></i>
+              <span class="links_name">Certificates Pending</span>
+            </a>
+          </li>
+
           <li>
             <a href="/university/certificate/form" class="">
               <i class='bx bx-grid-alt'></i>
