--- a/resources/views/students/myCertificate.ejs
+++ b/resources/views/students/myCertificate.ejs
@@ -26,7 +26,7 @@
                             <i class="fa fa-user"></i>
                         </span>
                     </div>
-                    <% if(certificate.isVerified === 'approved'){%>
+                    <% if(certificate.length){%>
                     <div class="input-group input-group-icon">
                         <h5 class="mt-2 ml-20">Your certificate ID: <%= certificate.uniqueID %></h5>
                         <span class="input-icon">
