--- a/resources/views/universities/certificate/createForm.ejs
+++ b/resources/views/universities/certificate/createForm.ejs
@@ -80,7 +80,7 @@
                         <div class="col-half">
                             <h5>Major</h5>
                             <div class="input-group">
-                                <select name="major text-2xl" id="">
+                                <select name="major" class="text-2xl" id="">
                                     <option value="CSE" <%= messages.major ? 'selected' : '' %>>CSE</option>
                                     <option value="EEE" <%= messages.major ? 'selected' : '' %>>EEE</option>
                                     <option value="BBA" <%= messages.major ? 'selected' : '' %>>BBA</option>
