--- a/resources/views/universities/students/approval.ejs
+++ b/resources/views/universities/students/approval.ejs
@@ -1,7 +1,7 @@
 <section class="home-content" style="margin-left:240px">
     <h3 class="sub-heading"> account requests </h3>
     <h1 class="heading"> students </h1>
-    <a class="mr-20 float-right text-4xl" href="/university/accounts/completed"><i class="fas fa-angle-double-right"></i></a>
+    <a class="mr-20 float-right text-4xl" href="/university/accounts/completed"><i class="fas fa-angle-double-right"></i>See approved students</a>
   <div class="table-wrapper">
     <div class="new-table w-full mx-auto table-certificate">
       
