--- a/resources/views/universities/students/approved.ejs
+++ b/resources/views/universities/students/approved.ejs
@@ -1,7 +1,8 @@
 <section class="home-content">
-    <h3 class="sub-heading"> approved accounts </h3>
-    <h1 class="heading"> students </h1>
-    <a class="mr-20 float-right text-4xl" href="/university/accounts/request"><i class="fas fa-angle-double-right"></i></a>
+    <h1 class="heading"> Approved accounts </h1>
+    <h3 class="sub-heading"> Students </h3>
+    
+    <a class="mr-20 float-left text-3xl" href="/university/accounts/request"><i class="fas fa-angle-double-left"></i>&nbsp;View Pending Student Accounts</a>
 
     <div class="table-wrapper">
       <div class="new-table w-full mx-auto table-certificate">
