Followup of previous commit

--- a/resources/views/students/dashboard.ejs
+++ b/resources/views/students/dashboard.ejs
@@ -13,7 +13,7 @@
 
       <div class="box">
         <div class="right-side">
-          <a href="#" class="box-topic"> Additional</a>
+          <a href="/student/public/certificate" class="box-topic"> QR</a>
         </div>
       </div>
      
