--- a/resources/views/students/qr.ejs
+++ b/resources/views/students/qr.ejs
@@ -1,8 +1,8 @@
 <% if(!empty && certificate.isVerified === 'approved'){ %>
 
 <section class="home-content mr-100">
-    <h3 class="sub-heading"> approved accounts </h3>
-    <h1 class="heading"> students </h1>
+    
+    <h1 class="heading"> Cerificate QR  </h1>
     <canvas id="qr" ></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
     <script>
@@ -28,8 +28,8 @@
 <section class="home-content py-20">
   <section class="ml-20 certificate_container py-20">
 
-          <h3 class="sub-heading"> read certificate </h3>
-          <h1 class="heading"> read this certificate </h1>
+         
+          <h1 class="heading"> Certificate Details </h1>
       
           <form id="read_form">
               <div class="row">
